--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -74,31 +74,146 @@
  RUS_radical_nationalism:0 "Russian Empire"
  RUS_radical_nationalism_ADJ:0 "Russian "
  RUS_radical_nationalism_DEF:0 "The Russian Empire"
+ 
+ MEX_communism:0 "United Mexican States"
+ MEX_communism_ADJ:0 "Mexican "
+ MEX_communism_DEF:0 "The United Mexican States"
+ MEX_radical_socialism:0 "Socialist States of Mexico"
+ MEX_radical_socialism_ADJ:0 "Mexican "
+ MEX_radical_socialism_DEF:0 "The Socialist States of Mexico"
+ MEX_social_democrat:0 "Second Mexican Republic"
+ MEX_social_democrat_ADJ:0 "Mexican "
+ MEX_social_democrat_DEF:0 "The Second Mexican Republic"
+ MEX_market_liberalism:0 "Second Mexican Republic"
+ MEX_market_liberalism_ADJ:0 "Mexican "
+ MEX_market_liberalism_DEF:0 "The Second Mexican Republic"
+ MEX_social_conservatism:0 "Second Mexican Republic"
+ MEX_social_conservatism_ADJ:0 "Mexican "
+ MEX_social_conservatism_DEF:0 "The Second Mexican Republic"
+ MEX_authoritarian_government:0 "Second Mexican Republic"
+ MEX_authoritarian_government_ADJ:0 "Mexican "
+ MEX_authoritarian_government_DEF:0 "The Second Mexican Republic"
+ MEX_paternal_autocrat:0 "Kingdom of Mexico"
+ MEX_paternal_autocrat_ADJ:0 "Mexican "
+ MEX_paternal_autocrat_DEF:0 "The Kingdom of Mexico"
+ MEX_radical_nationalism:0 "Empire of Mexico"
+ MEX_radical_nationalism_ADJ:0 "Mexican "
+ MEX_radical_nationalism_DEF:0 "The Empire of Mexico"
+ 
+ SPR_communism:0 "Spanish Union"
+ SPR_communism_ADJ:0 "Spanish "
+ SPR_communism_DEF:0 "The Spanish Union"
+ SPR_radical_socialism:0 "Socialist Federation of Spain"
+ SPR_radical_socialism_ADJ:0 "Spanish "
+ SPR_radical_socialism_DEF:0 "The Socialist Federation of Spain"
+ SPR_social_democrat:0 "Spanish Republic"
+ SPR_social_democrat_ADJ:0 "Spanish "
+ SPR_social_democrat_DEF:0 "The Spanish Republic"
+ SPR_market_liberalism:0 "Spanish Republic"
+ SPR_market_liberalism_ADJ:0 "Spanish "
+ SPR_market_liberalism_DEF:0 "The Spanish Republic"
+ SPR_social_conservatism:0 "Kingdom of Spain"
+ SPR_social_conservatism_ADJ:0 "Spanish "
+ SPR_social_conservatism_DEF:0 "The Kingdom of Spain"
+ SPR_authoritarian_government:0 "Kingdom of Spain"
+ SPR_authoritarian_government_ADJ:0 "Spanish "
+ SPR_authoritarian_government_DEF:0 "The Kingdom of Spain"
+ SPR_paternal_autocrat:0 "Kingdom of Spain"
+ SPR_paternal_autocrat_ADJ:0 "Spanish "
+ SPR_paternal_autocrat_DEF:0 "The Kingdom of Spain"
+ SPR_radical_nationalism:0 "Spanish Empire"
+ SPR_radical_nationalism_ADJ:0 "Spanish "
+ SPR_radical_nationalism_DEF:0 "The Spanish Empire"
 
- GER_fascism:0 "German Reich"
- GER_fascism_DEF:0 "The German Reich"
- GER_democratic:0 "German Republic"
- GER_democratic_DEF:0 "The German Republic"
- GER_neutrality:0 "Germany"
- GER_neutrality_DEF:0 "Germany"
- GER_communism:0 "Socialist Republic of Germany"
- GER_communism_DEF:0 "The Socialist Republic of Germany"
- GER_fascism_ADJ:0 "German"
- GER_democratic_ADJ:0 "German"
- GER_neutrality_ADJ:0 "German"
- GER_communism_ADJ:0 "German"
- ENG_fascism:0 "British Empire"
- ENG_fascism_DEF:0 "The British Empire"
- ENG_democratic:0 "United Kingdom"
- ENG_democratic_DEF:0 "The United Kingdom"
- ENG_neutrality:0 "Great Britain"
- ENG_neutrality_DEF:0 "Great Britain"
+ GER_communism:0 "Worker's Republic of Germany"
+ GER_communism_ADJ:0 "German "
+ GER_communism_DEF:0 "The Worker's Republic of Germany"
+ GER_radical_socialism:0 "Worker's Republic of Germany"
+ GER_radical_socialism_ADJ:0 "German "
+ GER_radical_socialism_DEF:0 "The Worker's Republic of Germany"
+ GER_social_democrat:0 "Weimar Republic"
+ GER_social_democrat_ADJ:0 "German "
+ GER_social_democrat_DEF:0 "The Weimar Republic"
+ GER_market_liberalism:0 "Weimar Republic"
+ GER_market_liberalism_ADJ:0 "German "
+ GER_market_liberalism_DEF:0 "The Weimar Republic"
+ GER_social_conservatism:0 "Weimar Republic"
+ GER_social_conservatism_ADJ:0 "German "
+ GER_social_conservatism_DEF:0 "The Weimar Republic"
+ GER_authoritarian_government:0 "German State"
+ GER_authoritarian_government_ADJ:0 "German "
+ GER_authoritarian_government_DEF:0 "The German State"
+ GER_paternal_autocrat:0 "German Reich"
+ GER_paternal_autocrat_ADJ:0 "German "
+ GER_paternal_autocrat_DEF:0 "The German Reich"
+ GER_radical_nationalism:0 "German Reich"
+ GER_radical_nationalism_ADJ:0 "German "
+ GER_radical_nationalism_DEF:0 "The German Reich"
+ 
  ENG_communism:0 "Union of Britain"
+ ENG_communism_ADJ:0 "British "
  ENG_communism_DEF:0 "The Union of Britain"
- ENG_fascism_ADJ:0 "British"
- ENG_democratic_ADJ:0 "British"
- ENG_neutrality_ADJ:0 "British"
- ENG_communism_ADJ:0 "British"
+ ENG_radical_socialism:0 "Union of Britain"
+ ENG_radical_socialism_ADJ:0 "British "
+ ENG_radical_socialism_DEF:0 "The Union of Britain"
+ ENG_social_democrat:0 "British Empire
+ ENG_social_democrat_ADJ:0 "British "
+ ENG_social_democrat_DEF:0 "The British Empire"
+ ENG_market_liberalism:0 "British Empire"
+ ENG_market_liberalism_ADJ:0 "British "
+ ENG_market_liberalism_DEF:0 "The British Empire"
+ ENG_social_conservatism:0 "British Empire"
+ ENG_social_conservatism_ADJ:0 "British "
+ ENG_social_conservatism_DEF:0 "The British Empire"
+ ENG_authoritarian_government:0 "The Commonwealth"
+ ENG_authoritarian_government_ADJ:0 "British "
+ ENG_authoritarian_government_DEF:0 "The Commonwealth"
+ ENG_paternal_autocrat:0 "British Empire"
+ ENG_paternal_autocrat_ADJ:0 "British "
+ ENG_paternal_autocrat_DEF:0 "The British Empire"
+ ENG_radical_nationalism:0 "British Empire"
+ ENG_radical_nationalism_ADJ:0 "British "
+ ENG_radical_nationalism_DEF:0 "The British Empire"
+ 
+ CRO_communism:0 "Socialist Republic of Croatia"
+ CRO_communism_ADJ:0 "Croatian "
+ CRO_communism_DEF:0 "The Socialist Republic of Croatia"
+ CRO_radical_socialism:0 "Union of Britain"
+ CRO_radical_socialism_ADJ:0 "British "
+ CRO_radical_socialism_DEF:0 "The Union of Britain"
+ CRO_social_democrat:0 "British Empire
+ CRO_social_democrat_ADJ:0 "British "
+ CRO_social_democrat_DEF:0 "The British Empire"
+ CRO_market_liberalism:0 "British Empire"
+ CRO_market_liberalism_ADJ:0 "British "
+ CRO_market_liberalism_DEF:0 "The British Empire"
+ CRO_social_conservatism:0 "British Empire"
+ CRO_social_conservatism_ADJ:0 "British "
+ CRO_social_conservatism_DEF:0 "The British Empire"
+ CRO_authoritarian_government:0 "The Commonwealth"
+ CRO_authoritarian_government_ADJ:0 "British "
+ CRO_authoritarian_government_DEF:0 "The Commonwealth"
+ CRO_paternal_autocrat:0 "British Empire"
+ CRO_paternal_autocrat_ADJ:0 "British "
+ CRO_paternal_autocrat_DEF:0 "The British Empire"
+ CRO_radical_nationalism:0 "British Empire"
+ CRO_radical_nationalism_ADJ:0 "British "
+ CRO_radical_nationalism_DEF:0 "The British Empire"
+ 
+ CRO_fascism:0 "Independent State of Croatia"
+ CRO_fascism_DEF:0 "The Independent State of Croatia"
+ CRO_democratic:0 "Republic of Croatia"
+ CRO_democratic_DEF:0 "The Republic of Croatia"
+ CRO_neutrality:0 "Kingdom of Croatia"
+ CRO_neutrality_DEF:0 "The Kingdom of Croatia"
+ CRO_communism:0 "SR Croatia"
+ CRO_communism_DEF:0 "SR Croatia"
+ CRO_fascism_ADJ:0 "Croatian"
+ CRO_democratic_ADJ:0 "Croatian"
+ CRO_neutrality_ADJ:0 "Croatian"
+ CRO_communism_ADJ:0 "Croatian"
+ 
+ 
  SOV_fascism:0 "Russian Empire"
  SOV_fascism_DEF:0 "The Russian Empire"
  SOV_democratic:0 "Russian Federation"
@@ -987,18 +1102,6 @@
  RAJ_democratic_ADJ:0 "British Indian"
  RAJ_neutrality_ADJ:0 "British Indian"
  RAJ_communism_ADJ:0 "British Indian"
- CRO_fascism:0 "Independent State of Croatia"
- CRO_fascism_DEF:0 "The Independent State of Croatia"
- CRO_democratic:0 "Republic of Croatia"
- CRO_democratic_DEF:0 "The Republic of Croatia"
- CRO_neutrality:0 "Kingdom of Croatia"
- CRO_neutrality_DEF:0 "The Kingdom of Croatia"
- CRO_communism:0 "SR Croatia"
- CRO_communism_DEF:0 "SR Croatia"
- CRO_fascism_ADJ:0 "Croatian"
- CRO_democratic_ADJ:0 "Croatian"
- CRO_neutrality_ADJ:0 "Croatian"
- CRO_communism_ADJ:0 "Croatian"
  GXC_fascism:0 "Third Guangxi Clique"
  GXC_fascism_DEF:0 "The Third Guangxi Clique"
  GXC_democratic:0 "Guangxi Independent Republic"
