British and Balticum

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -156,7 +156,7 @@
  ENG_radical_socialism:0 "Union of Britain"
  ENG_radical_socialism_ADJ:0 "British "
  ENG_radical_socialism_DEF:0 "The Union of Britain"
- ENG_social_democrat:0 "British Empire
+ ENG_social_democrat:0 "British Empire"
  ENG_social_democrat_ADJ:0 "British "
  ENG_social_democrat_DEF:0 "The British Empire"
  ENG_market_liberalism:0 "British Empire"
@@ -178,40 +178,52 @@
  CRO_communism:0 "Socialist Republic of Croatia"
  CRO_communism_ADJ:0 "Croatian "
  CRO_communism_DEF:0 "The Socialist Republic of Croatia"
- CRO_radical_socialism:0 "Union of Britain"
- CRO_radical_socialism_ADJ:0 "British "
- CRO_radical_socialism_DEF:0 "The Union of Britain"
- CRO_social_democrat:0 "British Empire
- CRO_social_democrat_ADJ:0 "British "
- CRO_social_democrat_DEF:0 "The British Empire"
- CRO_market_liberalism:0 "British Empire"
- CRO_market_liberalism_ADJ:0 "British "
- CRO_market_liberalism_DEF:0 "The British Empire"
- CRO_social_conservatism:0 "British Empire"
- CRO_social_conservatism_ADJ:0 "British "
- CRO_social_conservatism_DEF:0 "The British Empire"
- CRO_authoritarian_government:0 "The Commonwealth"
- CRO_authoritarian_government_ADJ:0 "British "
- CRO_authoritarian_government_DEF:0 "The Commonwealth"
- CRO_paternal_autocrat:0 "British Empire"
- CRO_paternal_autocrat_ADJ:0 "British "
- CRO_paternal_autocrat_DEF:0 "The British Empire"
- CRO_radical_nationalism:0 "British Empire"
- CRO_radical_nationalism_ADJ:0 "British "
- CRO_radical_nationalism_DEF:0 "The British Empire"
+ CRO_radical_socialism:0 "Socialist Republic of Croatia"
+ CRO_radical_socialism_ADJ:0 "Croatian "
+ CRO_radical_socialism_DEF:0 "The Socialist Republic of Croatia"
+ CRO_social_democrat:0 "Republic of Croatia"
+ CRO_social_democrat_ADJ:0 "Croatian "
+ CRO_social_democrat_DEF:0 "The Republic of Croatia"
+ CRO_market_liberalism:0 "Republic of Croatia"
+ CRO_market_liberalism_ADJ:0 "Croatian "
+ CRO_market_liberalism_DEF:0 "The Republic of Croatia"
+ CRO_social_conservatism:0 "Republic of Croatia"
+ CRO_social_conservatism_ADJ:0 "Croatian "
+ CRO_social_conservatism_DEF:0 "The Republic of Croatia"
+ CRO_authoritarian_government:0 "Republic of Croatia"
+ CRO_authoritarian_government_ADJ:0 "Croatian "
+ CRO_authoritarian_government_DEF:0 "The Republic of Croatia"
+ CRO_paternal_autocrat:0 "Kingdom of Croatia"
+ CRO_paternal_autocrat_ADJ:0 "Croatian "
+ CRO_paternal_autocrat_DEF:0 "The Kingdom of Croatia"
+ CRO_radical_nationalism:0 "Independent State of Croatia"
+ CRO_radical_nationalism_ADJ:0 "Croatian "
+ CRO_radical_nationalism_DEF:0 "The Independent State of Croatia"
  
- CRO_fascism:0 "Independent State of Croatia"
- CRO_fascism_DEF:0 "The Independent State of Croatia"
- CRO_democratic:0 "Republic of Croatia"
- CRO_democratic_DEF:0 "The Republic of Croatia"
- CRO_neutrality:0 "Kingdom of Croatia"
- CRO_neutrality_DEF:0 "The Kingdom of Croatia"
- CRO_communism:0 "SR Croatia"
- CRO_communism_DEF:0 "SR Croatia"
- CRO_fascism_ADJ:0 "Croatian"
- CRO_democratic_ADJ:0 "Croatian"
- CRO_neutrality_ADJ:0 "Croatian"
- CRO_communism_ADJ:0 "Croatian"
+ BAL_communism:0 "United Baltic States"
+ BAL_communism_ADJ:0 "Baltic "
+ BAL_communism_DEF:0 "The United Baltic States"
+ BAL_radical_socialism:0 "Socialist Baltic States"
+ BAL_radical_socialism_ADJ:0 "Baltic "
+ BAL_radical_socialism_DEF:0 "The Socialist Baltic States"
+ BAL_social_democrat:0 "Baltic States"
+ BAL_social_democrat_ADJ:0 "Baltic "
+ BAL_social_democrat_DEF:0 "The Baltic States"
+ BAL_market_liberalism:0 "Baltic States"
+ BAL_market_liberalism_ADJ:0 "Baltic "
+ BAL_market_liberalism_DEF:0 "The Baltic States"
+ BAL_social_conservatism:0 "Baltic States"
+ BAL_social_conservatism_ADJ:0 "Baltic "
+ BAL_social_conservatism_DEF:0 "The Baltic States"
+ BAL_authoritarian_government:0 "Baltic States"
+ BAL_authoritarian_government_ADJ:0 "Baltic "
+ BAL_authoritarian_government_DEF:0 "The Baltic States"
+ BAL_paternal_autocrat:0 "Baltic States"
+ BAL_paternal_autocrat_ADJ:0 "Baltic "
+ BAL_paternal_autocrat_DEF:0 "The Baltic States"
+ BAL_radical_nationalism:0 "Baltic States"
+ BAL_radical_nationalism_ADJ:0 "Baltic "
+ BAL_radical_nationalism_DEF:0 "The Baltic States"
  
  
  SOV_fascism:0 "Russian Empire"
